update url in Git

--- a/eFlow/DistributionSummary.plist
+++ b/eFlow/DistributionSummary.plist
@@ -41,7 +41,7 @@
 						<key>id</key>
 						<string>SPM8HJC5T2</string>
 						<key>name</key>
-						<string>锋 江</string>
+						<string>feng jiang</string>
 					</dict>
 				</dict>
 			</array>
@@ -72,7 +72,7 @@
 				<key>id</key>
 				<string>SPM8HJC5T2</string>
 				<key>name</key>
-				<string>锋 江</string>
+				<string>feng jiang</string>
 			</dict>
 		</dict>
 	</array>
