--- a/eFlow/manifest.plist
+++ b/eFlow/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://10.210.10.20/apps/eFlow.ipa</string>
+					<string>https://github.com/Honest-Liar/iOSRepo/raw/master/eFlow/eFlow.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://10.210.10.20/image/eflow.57x57.png</string>
+					<string>https://github.com/Honest-Liar/iOSRepo/raw/master/eFlow/eflow.57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://10.210.10.20/image/eflow.512x512.png</string>
+					<string>https://github.com/Honest-Liar/iOSRepo/raw/master/eFlow/eflow.512x512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
